--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 
-NEXT_PUBLIC_EXPRESS_API_URL=http://node-express-env.eba-av5pb7hu.us-east-1.elasticbeanstalk.com/api
+NEXT_PUBLIC_EXPRESS_API_URL=http://localhost:3002/api
